app/globals.css
/* ... */
@media only screen and (max-width: 500px) {
  .partner {
    background-color:rgb(236, 236, 236);
  border-radius: 10px;
  opacity: 80%;
  margin: 1px;
  display: block;
  transition: 0.2s;
    font-size: 70%;
    height: fit-content;
    min-height: 150px;

  }
  
}
@media only screen and (max-width: 500px) {
  .partners {
    grid-template-columns: repeat(3, 1fr);
  }
  
}
@media only screen and (max-width: 500px) {
  .partners p {
    margin:0%;
    margin: auto;
  }
}
.partners p {
  color: rgb(0, 0, 0);
  margin: auto;
  padding:3px;
  
}

.partners p:hover {
  color: rgb(20, 91, 102);
}
.partner:hover {
  opacity: 100%;
}
@media only screen and (max-width: 1000px) {
  .objektgrid {
      grid-template-columns: repeat(4, 1fr);
  }
}
@media only screen and (max-width: 700px) {
  .objektgrid {
      grid-template-columns: repeat(3, 1fr);
  }
}

@media only screen and (max-width: 400px) {
  .objektgrid {
      grid-template-columns: repeat(2, 1fr);
  }
}
.grid-objekt {
  padding: 5px;
  font-size: 30px;
  text-align: center;
  margin: auto;

}

.objekt-skeleton {
  text-align: center;
  margin: auto;
  background-color: grey;
  opacity: 20%;
  padding-right: 100%;
  padding-top: 60%;
  padding-bottom: 100%;
  margin-bottom: 20px;
  width: 100%;
  animation: pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
  border-radius: 14px;
}

@keyframes pulse {
  0%, 100% {
    opacity: 1;
  }
  50% {
    opacity: .5;
  }
}

.objektinfo {
  min-width: 300px;
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 2;
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  margin-top:-90px;

}
@media only screen and (max-width: 600px) {
  .objektinfo {

     width: 100%;
     margin-top:0px;

  }
}


@media only screen and (max-width: 600px) {
  .objektflipclass {
     min-width:200px;

}}

@media only screen and (max-height: 617px) {
  .objektflipclass {
     min-width:130px;

}}
.inobjektinfo {
  display: flex;
  width: 100%;
  max-width: 500px;
  min-width: 400px;
  height: 100%;
  margin-top: 10px;
  margin: auto;
  border-radius: 10px;
  color: white;
  padding:30px;
  overflow-y:scroll;
}

.objektBackground {
  width:70%;
  min-width: fit-content;
  padding-left: 20px;
  padding-right: 20px;
  border-radius:10px;
  height: 60%;
  max-height: 450px;
}

.marginright {
  margin: auto;
  margin-right: 3%;
  scale: 104%;
  
  
}
.marginleft {
  margin:auto;
  height: fit-content;
  
}
@media only screen and (max-width: 600px) {
  .marginright {
    margin-right: 0px;
  }
}
@media only screen and (max-width: 600px) {
  .objektBackground {
    width: 100%;
    min-width: 0px;
    height: 100%;
    max-height: 1000px;
    border-radius:0px 0px 20px 20px;
  }

}
@media only screen and (max-width: 600px) {
  .inobjektinfo {
    display: block;
     width: 100%;
     max-width: 500px;
      min-width: 300px;
     padding: 30px;
     overflow-y: scroll;

     color: white;
     border-radius: 10px;
     margin-top: -130px;
     top: 0;
    bottom:0;

  }
}

@media only screen and (min-width: 1100px) {
  .inobjektinfo {
    scale: 110%;

  }
}

.objektinfodiv {
  margin-top: 8vw;
  height: 100%;
}
@media only screen and (max-width: 600px) {
  .objektinfodiv {
    margin: 0px;
    height: auto;
  }
}



@media only screen and (max-width: 600px) {
  .objektflipclass {
    width: 50%; 
    margin: auto;
  }
}


div#blur.active {
  filter: blur(20px);
  pointer-events: none;
}

.empty {
  padding: 2px;
}
.x {
  z-index: 2;
  width: 100%;
  height: 5%;
  background-color: #ffffff;
}

.x:hover {
  background-color: #aeaeae;
}
.sending{
  height:70%;
}

@media only screen and (max-width: 600px) {
  .sending{
    height: 60vh;
    max-height: 500px;
    margin-top: -130px;

  }
}

@media only screen and (max-width: 600px) {
  .x {
    left: 6%;
    top: 0px;
    width: 30px;
    z-index: 2;
    height: 100px;
    border-radius: 20px;
  }
}
@media only screen and (max-width: 600px) {
  .x p{
    
    font-weight: bold;
  }
}


.objektDiv:hover {
  transform: scale(1.02);
}
@media only screen and (max-width: 600px) {
  .objektDiv:hover {
    transform: none;
  }
}




.objekt_preview_text3 {
  padding-top: 1px;
  padding-right: 1.2%;
}

.objekt_preview_text2 {
  font-size: 70%;
}



.bigger {
  font-size: 100px;
}

.big {
  font-size: 40px;
}
.bigel {
  font-size: 33px;
}
.bold {
  font-weight: bold;
}

.headerbutton {
  padding: 0.5rem; 
border-radius: 0.375rem; 
font-weight: 700; 
font-size: 80%;
background-color: rgb(78, 38, 151); 
color: white;
transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
transition-duration: 300ms; 
}
.headerbutton:hover {
  padding: 0.5rem; 
border-radius: 0.375rem; 
font-weight: 700; 
background-color: rgb(121, 83, 190); 
color: white;
transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
transition-duration: 300ms; 
}

.whitetext {
  color: white;
}

/* FOR WHEEL */

.lds-dual-ring {
  display: inline-block;
  width: 100px;
  height: 100px;
}
.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 100px;
  height:100px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}
@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.backButton {
  background: rgb(78, 38, 151);
  padding:5px;
  color:white;
  position: absolute;
  left:10vw;
  border-radius:10px;
  font-weight:bold;
  width: 40px;
}


.backButton.trading {
  left: 4.5%;
  top: 17%;
}

.sendGrid {
display: grid;
gap:10px;
}
.sendGrid button {
  height: 30px;
  display: flex;
  width: 100%;
  
  }
  .sendGrid div {
    height: 30px;
    display: flex;
    margin: auto;

    
    }
/* ... */

